<resources>
    <string name="app_name">BurppleFoodPlaces</string>
    <string name="action_settings">Settings</string>

    <string name="login">LOGIN ၀င်ရန်</string>

    <string name="register">REGISTER ပြုလုပ်ရန်</string>
    <string name="login_form">Login form</string>
    <string name="mobile_email">Mobile or Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="btn_login">Login</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="or">(or)</string>

    <string name="sign_up_form">Sign Up form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mail">Mail@example.com</string>
    <string name="phone">Please enter a phone number.</string>
    <string name="passwprd">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_condition">I agree to Terms and Pravicy Policy</string>
    <string name="sign_up">Sign Up</string>

</resources>

