<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/color_background">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3"
        >
        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_first_name"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        >
        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_last_name"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        >
        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_mail"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        >
        <EditText
            android:id="@+id/et_phone_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_phone_no"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_password"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        >
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_confirm_password"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_first_name"
        android:text="@string/terms_and_condition"
        android:textColor="@color/color_white"
        />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/cb_terms_and_conditions"
        android:background="@color/colorAccent"
        android:textColor="@color/color_white"
        android:layout_alignLeft="@id/input_first_name"
        android:layout_alignRight="@id/input_first_name"
        android:layout_marginTop="@dimen/margin_medium_2"
        />


</RelativeLayout>