<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/color_background">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_form"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/regular_user_profile"
        android:layout_height="@dimen/regular_user_profile"
        android:src="@drawable/dummy_user_picture"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mobile_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_profile"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_3"
        android:layout_marginRight="@dimen/margin_medium_3"
        >
        <EditText
            android:id="@+id/et_mobile_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_email"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_mobile_or_email"
        android:textColorHint="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_mobile_or_email"
        android:layout_alignRight="@id/input_mobile_or_email"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/color_white"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_below="@id/input_password"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/colorseparator"
        android:layout_alignLeft="@id/input_mobile_or_email"
        />

    <TextView
        android:id="@+id/btn_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/input_mobile_or_email"
        android:layout_alignRight="@id/input_password"
        android:textColor="@color/color_white"
        android:layout_alignTop="@id/cb_remember"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_remember"
        android:text="@string/btn_login"
        android:background="@color/colorAccent"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_alignLeft="@id/input_mobile_or_email"
        android:layout_alignRight="@id/input_mobile_or_email"
        />

    <TextView
        android:id="@+id/tv_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_below="@id/btn_login"
        android:textColor="@color/color_white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(or)"
        android:textColor="@color/color_white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_create_new_account"
        android:layout_marginTop="@dimen/margin_medium_2"/>

    <ImageView
        android:id="@+id/iv_facebook"
        android:layout_width="@dimen/circle_size"
        android:layout_height="@dimen/circle_size"
        android:src="@drawable/if_facebook_circle_294710"
        android:layout_below="@id/tv_or"
        android:layout_toLeftOf="@id/iv_twitter"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_alignTop="@id/iv_twitter"
        />

    <ImageView
        android:id="@+id/iv_twitter"
        android:layout_width="@dimen/circle_size"
        android:layout_height="@dimen/circle_size"
        android:src="@drawable/if_twitter_circle_294709"
        android:layout_below="@id/tv_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium_2"
        />

    <ImageView
        android:id="@+id/iv_google"
        android:layout_width="@dimen/circle_size"
        android:layout_height="@dimen/circle_size"
        android:src="@drawable/if_google_circle_294707"
        android:layout_below="@id/tv_or"
        android:layout_toRightOf="@id/iv_twitter"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_alignTop="@id/iv_twitter"
        />

</RelativeLayout>